major Spring Boot and Apache CXF upgrade (#15)
- upgrade Java from 17 to 21
- upgrade Spring Boot from 2.7 to 4.0
- upgrade Apache CXF from 3.6 to 4.1
- upgrade Protobuf compiler from 3.25 to 4.33
- upgrade gRPC Spring Boot Starter from net.devh 3.1 to org.springframework.grpc 1.0
- upgrade Protobuf Maven Plugin from org.xolstice.maven.plugins 0.6 to io.github.ascopes 4.1
- use Google Distroless runtime image to reduce attack vector and vulnerabilities
- use SSL bundles (JKS/PEM) to configure SOAP server and client
- remove SslSystemPropertiesConfig (discontinuing support for javax.net.ssl.*)
- add ability to also authorize client certificate DN of local terminated HTTPS requests
  - rename verify-ssl-client-subject-dn to client.certificate.authorize-dn
  - rename ssl-client-subject-dn-header to client.certificate.ssl-client-subject-dn-header
  - client.certificate.authorize-dn options:
    - header: use the DN from header on the HTTP request
    - certificate: use the DN from the certificate on the HTTPS request
- update documentation